--- a/Frontend/src/components/css/Navigationbar.css
+++ b/Frontend/src/components/css/Navigationbar.css
@@ -1,7 +1,7 @@
 /* Container styles */
 .container {
     background-color: white;
-    padding: 10px 100px 10px 100px;
+    padding: 30px 100px 30px 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,6 +20,9 @@
     border: none;
     padding: 10px 20px;
     cursor: pointer;
+  }
+  .home-icon{
+    color: red;
   }
   
   button:hover {
