--- a/Frontend/src/components/css/PopularCourses.css
+++ b/Frontend/src/components/css/PopularCourses.css
@@ -2,11 +2,11 @@
 
 .popular-courses-container {
     text-align: center;
-    margin: 20px;
+    padding: 40px;
   }
   
   h1 {
-    font-size: 24px;
+    font-size: 40px;
     margin-bottom: 20px;
   }
   
