--- a/Frontend/src/components/css/Navigationbar.css
+++ b/Frontend/src/components/css/Navigationbar.css
@@ -72,4 +72,11 @@
   .courses:hover .courses-dropdown-content {
     display: block;
   }
-  
+  .about-us-arrow{
+    display: flex;
+    align-items: center;
+  }
+  .courses{
+    align-items: center;
+    display: flex;
+  }
