--- a/Backend/public/views/test.ejs
+++ b/Backend/public/views/test.ejs
@@ -32,7 +32,7 @@
     <label for="yes">Yes</label>
     <br>
     <input type="radio" id="no" name="subtitle" value="no"
-      onclick="toggleVisibility('no','subtitleDetails','descriptionDetails')" checked>
+      onclick="toggleVisibility('no','subtitleDetails','descriptionDetails')" >
     <label for="no">No</label>
 
     <br>
