--- a/Backend/public/views/adminHome.ejs
+++ b/Backend/public/views/adminHome.ejs
@@ -4,7 +4,7 @@
 <head>
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">
+    <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">    
 </head>
 
 <body>
@@ -22,9 +22,9 @@
                         Courses
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownCourses" id="courses">
-                        <a class="dropdown-item" onclick="loadSection('addCourse.ejs',this)">Add</a>
-                        <a class="dropdown-item" onclick="loadSection('updateCourse.ejs',this)">Update</a>
-                        <a class="dropdown-item" onclick="loadSection('deleteCourse.ejs',this)">Delete</a>
+                        <a class="dropdown-item" onclick="loadSection('addCourse',this)">Add</a>
+                        <a class="dropdown-item" onclick="loadSection('updateCourse',this)">Update</a>
+                        <a class="dropdown-item" onclick="loadSection('deleteCourse',this)">Delete</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -33,9 +33,9 @@
                         Products
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownProducts" id="products">
-                        <a class="dropdown-item" onclick="loadSection('addProduct.ejs',this)">Add</a>
-                        <a class="dropdown-item" onclick="loadSection('updateProduct.ejs',this)">Update</a>
-                        <a class="dropdown-item" onclick="loadSection('deleteProduct.ejs',this)">Delete</a>
+                        <a class="dropdown-item" onclick="loadSection('addProduct',this)">Add</a>
+                        <a class="dropdown-item" onclick="loadSection('updateProduct',this)">Update</a>
+                        <a class="dropdown-item" onclick="loadSection('deleteProduct',this)">Delete</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -44,8 +44,8 @@
                         Gallary
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownProducts" id="gallary">
-                        <a class="dropdown-item" onclick="loadSection('addPhoto.ejs',this)">Photo</a>
-                        <a class="dropdown-item" onclick="loadSection('addVideo.ejs',this)">Video</a>
+                        <a class="dropdown-item" onclick="loadSection('addPhoto',this)">Photo</a>
+                        <a class="dropdown-item" onclick="loadSection('addVideo',this)">Video</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -54,9 +54,9 @@
                         Testimonial
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownProducts" id="testimonial">
-                        <a class="dropdown-item" onclick="loadSection('addtestimonial.ejs',this)">Add</a>
-                        <a class="dropdown-item" onclick="loadSection('updateTestimonial.ejs',this)">Update</a>
-                        <a class="dropdown-item" onclick="loadSection('deleteTestimonial.ejs',this)">Delete</a>
+                        <a class="dropdown-item" onclick="loadSection('addtestimonial',this)">Add</a>
+                        <a class="dropdown-item" onclick="loadSection('updateTestimonial',this)">Update</a>
+                        <a class="dropdown-item" onclick="loadSection('deleteTestimonial',this)">Delete</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -79,6 +79,7 @@
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="/js/richText.js" defer></script>
     <script src="/js/index.js" defer></script>
+    <script src="/js/course.js" defer></script>
 </body>
 
 </html>
