--- a/Backend/public/views/test.ejs
+++ b/Backend/public/views/test.ejs
@@ -1,80 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">
+ 
+    <title>Dynamic Execution Example</title>
+    <script>
+      var CourseList = [{ Title: 'Sample Course' }];
+      console.log("summa")
+  </script>
 </head>
 
 <body>
-  <h1>Course Information Form</h1>
 
-  <form>
-    <!-- Course Input Box -->
-    <label for="course">Course:</label>
-    <input type="text" id="course" name="course" required>
+    <h1>Dynamic Execution Example</h1>
 
-    <br>
+  <h2><%= CourseList[0].Title %></h2>
 
-    <!-- Title Input Box -->
-    <label for="title">Title:</label>
-    <input type="text" id="title" name="title" required>
-
-    <br>
-
-    <!-- Subtitle with Yes/No Radio Buttons -->
-    <span>Subtitle:</span>
-    <br>
-    <input type="radio" id="yes" name="subtitle" value="yes"
-      onclick="toggleVisibility('yes','subtitleDetails','descriptionDetails')">
-    <label for="yes">Yes</label>
-    <br>
-    <input type="radio" id="no" name="subtitle" value="no"
-      onclick="toggleVisibility('no','subtitleDetails','descriptionDetails')" >
-    <label for="no">No</label>
-
-    <br>
-
-
-    <div id="descriptionDetails">
-      <label for="quill-editornormal">Description:</label>
-      <div id="quill-editornormal" aria-label="Editor for describing something"></div>
-    </div>
-
-
-
-    <div id="subtitleDetails" style="display: none; flex-direction: column;">
-      <!-- Sub Button Input Box -->
-      <button type="button" id="subButtonBtn" onclick="toggleVisibility('yes','subtDescVisiblity')">New Sub</button>
-      <br>
-
-      <ul id="todoList"></ul>
-      
-      <div id="subtDescVisiblity" style="display: none; flex-direction: column;">
-        <!-- Title Input Box -->
-        <label for="subTitle">Sub Title:</label>
-        <input type="text" id="subTitle" name="subTitle" required>
-        <br>
-
-        <!-- Description Input Box -->
-        <label for="quill-editorSub">Description:</label>
-        <div  id="quill-editorSub" name="description"></div>
-        <br>
-
-        <button type="button" id="addBtn" onclick="addTodo()">Add</button>
-      </div>
-
-    </div>
-
-    <br><br>
-    <!-- Submit Button -->
-    <input type="submit" value="Submit">
-  </form>
-  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-  <script src="/js/richText.js" defer></script>
-  <script src="/js/index.js" defer></script>
-</body>
-
-</html>
+  </body>
+  
+  </html>
