--- a/Backend/public/views/courses/addCourse.ejs
+++ b/Backend/public/views/courses/addCourse.ejs
@@ -2,8 +2,8 @@
 
 <form>
     <!-- Course Input Box -->
-    <label for="course">Course:</label>
-    <input type="text" id="course" name="course" required>
+    <label for="fcourse">Course:</label>
+    <input type="text" id="fcourse" name="course" required>
 
     <br>
 
