--- a/Frontend/src/components/css/Navigationbar.css
+++ b/Frontend/src/components/css/Navigationbar.css
@@ -1,5 +1,5 @@
 /* Container styles */
-.container {
+/* .container {
     background-color: white;
     padding: 30px 100px 30px 100px;
     display: flex;
@@ -7,7 +7,7 @@
     align-items: center;
     box-shadow: 0 2px 5px rgba(143, 138, 138, 0.1);
     position: relative; /* Add position relative to the container */
-  }
+  /* } */ */
   
   .container b {
     font-size: 24px;
@@ -22,7 +22,7 @@
     cursor: pointer;
   }
   .home-icon{
-    color: red;
+    color: white;
   }
   
   button:hover {
@@ -30,15 +30,29 @@
   }
 
   /* Dropdown container */
+
+
+  .navigation__avatar .dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: white;
+    right: 90px;
+    padding: 16px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+  }
+
+  .navigation__avatar:hover .dropdown-content{
+    display: block;
+    transition: all .3s linear;
+  }
   .about-us .dropdown-content {
     display: none;
     position: absolute;
     background-color: white;
+    padding: 20px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    left: 0;
-    top: calc(100% + 10px); /* Position the dropdown below "About Us" */
-    width: 100%;
+    z-index: 1000;
   }
   
   .about-us:hover .dropdown-content {
@@ -63,10 +77,17 @@
     position: absolute;
     background-color: white;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    left: 0;
-    top: 100%;
-    width: 100%;
+    z-index: 1000;
+    top: 60%;
+    padding: 20px;
+  }
+
+  .courses{
+    .course-title:hover {
+    cursor: pointer;
+    background-color: #f2f2f2;
+    transition: all .3s linear;
+  }
   }
   
   .courses:hover .courses-dropdown-content {
@@ -79,4 +100,39 @@
   .courses{
     align-items: center;
     display: flex;
+  }
+
+  .navigation__gallery{
+display: flex;
+align-items: center;
+  }
+
+  .navigation__gallery-dropdown{
+display: flex;
+gap: 20px;
+  }
+
+  .course-title{
+    padding: 10px;
+    color: black;
+  }
+
+  .nav__item-link{
+    display: flex;
+    gap: 30px;
+    align-items: center;
+  }
+
+  .navigation__container{
+    padding: 30px 100px 30px 100px;
+    align-items: center;
+    box-shadow: 0 2px 5px rgba(143, 138, 138, 0.1);
+    position: relative; /* Add position relative to the container */
+    background-color: red;
+    color: #ffffff;
+  }
+
+  .navigation__test{
+    color: white;
+    text-decoration: none;
   }
