--- a/Frontend/src/components/css/Products.css
+++ b/Frontend/src/components/css/Products.css
@@ -10,11 +10,13 @@ body {
   
   .heading{
     text-align: center;
+    margin-top: 30px;
   }
   .product-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 40px;
     gap: 20px; /* Adjust the gap as needed */
   }
   
@@ -22,7 +24,6 @@ body {
     border: 1px solid #ddd;
     padding: 20px;
     cursor: pointer;
-    width: 20%; /* Each row contains three main product headings */
     margin-bottom: 20px;
     position: relative;
     transition: background-color 0.3s;
@@ -73,4 +74,34 @@ body {
   .product-item.active .sub-products {
     display: block;
   }
-  
+
+
+
+  .product-item{
+  color: black;
+  background-color: #FFC0C7;
+  padding: 24px;
+  width: 400px;
+  height: 300px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+.product__contents{
+  display: flex;
+  align-items: center;
+  height: 200px;
+  flex-direction: column;
+}
+
+.product__item{
+  color: black;
+  background-color: blueviolet;
+  padding: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 150px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+}
