--- a/Frontend/src/components/css/ProductsHomePage.css
+++ b/Frontend/src/components/css/ProductsHomePage.css
@@ -2,7 +2,6 @@
     text-align: center;
     margin: 0px;
     padding: 40px;
-    background-color: rgb(242, 245, 245);
 }
 
 .products-heading {
@@ -33,10 +32,10 @@
 .view-more-button {
     background-color: #e51123;
     color: #fff;
+    margin-right: 76px;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
-    margin-top: 20px;
     font-size: 16px;
     border-radius: 5px;
     text-decoration: none;
