--- a/Backend/public/views/adminHome.ejs
+++ b/Backend/public/views/adminHome.ejs
@@ -80,6 +80,7 @@
     <script src="/js/richText.js" defer></script>
     <script src="/js/index.js" defer></script>
     <script src="/js/course.js" defer></script>
+    <script src="/js/product.js" defer></script>
 </body>
 
 </html>
