--- a/Backend/public/views/products/deleteProduct.ejs
+++ b/Backend/public/views/products/deleteProduct.ejs
@@ -1,1 +1,26 @@
-<h1>DELETE PRODUCT</h1>
+<h1>Delete Product </h1>
+
+<!-- Product Dropdown -->
+<label for="deleteProduct">Select Product:</label>
+<select id="deleteProduct" onchange="handleDeleteProduct()">
+    <option value="" selected disabled>Select Product</option>
+    <% for (var i=0; i < productList.length; i++) { %>
+        <option value="<%= productList[i].mainProduct %>">
+            <%= productList[i].mainProduct %>
+        </option>
+        <% } %>
+</select>
+<br>
+
+<!-- Subproduct Dropdown -->
+<div id="deletesubproductVisiblity" style="display: none; flex-direction: column;">
+    <label for="deletesubproduct">Select Subproduct:</label>
+    <select id="deletesubproduct" multiple>       
+        <!-- Add more options as needed -->
+    </select>
+    <br>
+</div>
+
+<button type="button" id="subButtonBtn" 
+    onclick="deleteProduct()">Delete</button>
+<br>
