Testimonial+frontend Complete

--- a/Backend/public/views/testimonial/deleteTestimonial.ejs
+++ b/Backend/public/views/testimonial/deleteTestimonial.ejs
@@ -1,1 +1,16 @@
-<h1>DELETE TESTIMONIAL</h1>
+<h1>UPDATE TESTIMONIAL</h1>
+
+<label for="deleteTestimonial">Select Testimonial:</label>
+<select id="deleteTestimonial" >
+    <option value="" selected disabled>Select Testimonial</option>
+    <% for (var i=0; i < Testimonials.length; i++) { %>
+        <option value="<%= Testimonials[i].name %>">
+            <%= Testimonials[i].name %>
+        </option>
+        <% } %>
+</select>
+<br>
+
+
+
+<button type="button" onclick="handleDeleteTestimonial()">Delete</button>
