--- a/Backend/public/views/adminHome.ejs
+++ b/Backend/public/views/adminHome.ejs
@@ -5,6 +5,7 @@
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">    
+    <link rel="stylesheet" type="text/css" href="css/gallery.css">
 </head>
 
 <body>
@@ -81,6 +82,8 @@
     <script src="/js/index.js" defer></script>
     <script src="/js/course.js" defer></script>
     <script src="/js/product.js" defer></script>
+    <script src="/js/gallary.js" defer></script>
+    <script src="/js/testimonial.js" defer></script>
 </body>
 
 </html>
