--- a/Backend/public/views/products/updateProduct.ejs
+++ b/Backend/public/views/products/updateProduct.ejs
@@ -41,7 +41,7 @@
         <!-- <div id="quill-editorSubupAdd" name="description"></div> -->
         <br>
 
-        <button type="button" id="updateAddBtn" onclick="updateAddSubTitle()">Add</button>
+        <button type="button" id="updateAddBtn" onclick="updateAddSubProduct()">Add</button>
     </div>
 </div>
 
