--- a/Backend/public/views/products/addProduct.ejs
+++ b/Backend/public/views/products/addProduct.ejs
@@ -31,5 +31,5 @@
 
     <br><br>
     <!-- Submit Button -->
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" onclick="handleSubmitProduct()">
 </form>
