--- a/Backend/public/views/testimonial/deleteTestimonial.ejs
+++ b/Backend/public/views/testimonial/deleteTestimonial.ejs
@@ -1,4 +1,4 @@
-<h1>UPDATE TESTIMONIAL</h1>
+<h1>DELETE TESTIMONIAL</h1>
 
 <label for="deleteTestimonial">Select Testimonial:</label>
 <select id="deleteTestimonial" >
