Db connection for add,update course

--- a/Backend/public/views/courses/updateCourse.ejs
+++ b/Backend/public/views/courses/updateCourse.ejs
@@ -52,7 +52,7 @@
         <button type="button" id="updateBtn" onclick="updateCourseListSubtitle()">Update Subtitle</button>
     </div>
     <br>
-    <button onclick="fetchUpdateCourseList()">Update</button>
+    <button onclick="fetchUpdateCourseSubList()">Update</button>
 </div>
 
 
