--- a/Frontend/src/components/css/Features.scss
+++ b/Frontend/src/components/css/Features.scss
@@ -9,7 +9,7 @@
 
 .testimonial__content {
   padding-block: 30px;
-  background-image: url(./images/img1.jpg) ;
+  background-image: url(./images/testimonial-1.png) ;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -114,17 +114,17 @@ color: red;
 // }
 
 
-.popular-courses-container{
-  background-image: url("./images//img2.jpg");
-background-repeat: no-repeat;
-background-size: cover;
-padding: 30px;
+// .popular-courses-container{
+//   background-image: url("./images//img2.jpg");
+// background-repeat: no-repeat;
+// background-size: cover;
+// padding: 30px;
 
-h1{
-  display: flex;
-  justify-content: center;
-}
-}
+// h1{
+//   display: flex;
+//   justify-content: center;
+// }
+// }
 
 .features{
   justify-content: space-around;
