--- a/Frontend/src/components/css/Footer.scss
+++ b/Frontend/src/components/css/Footer.scss
@@ -56,7 +56,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
+  padding: 100px;
+  background-image: url("./images/contact-us1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 .footer-disclaimer {
   text-align: center;
@@ -73,4 +77,98 @@
   a.link:last-child {
     border-right: none; /* Remove the vertical line from the last link */
   }
+}
+
+.header__hover {
+  position: relative;
+}
+
+.header__hover::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 0; /* Start with no width */
+  height: 2px;
+  background-color: #fff; /* Change the color as needed */
+  transition: width 0.3s ease-out; /* Transition only the width property */
+}
+
+/* Increase width on hover */
+.header__hover:hover::after {
+  width: 100%;
+}
+
+.current__affairs {
+  text-decoration: none;
+  color: white;
+}
+
+.notify__header {
+  cursor: pointer;
+}
+
+.navigation__gallery-dropdown {
+  position: absolute;
+  // display: none;
+  right: -50px;
+  bottom: -20px;
+  padding: 20px;
+  background-color: white;
+  // z-index: 1001;
+}
+
+.navigation__gallery:hover {
+  .navigation__gallery-dropdown {
+    display: block !important; /* Show the dropdown when hovering over the Gallery element */
+  }
+}
+
+.navigation__gallery-dropdown:hover {
+  background-color: unset !important;
+}
+
+.test123 {
+  position: absolute;
+  // display: none;
+  right: -40px;
+  padding: 30px;
+  bottom: -110px;
+  background-color: white;
+}
+
+.course__content {
+  display: flex;
+  min-width: 300px;
+}
+.text__description {
+  position: absolute;
+  right: 0;
+  top: 175px;
+}
+
+.text__left {
+  display: flex;
+  justify-content: center;
+  padding-block: 7px;
+  border: 1px solid grey;
+}
+
+.courses__header {
+  background: red;
+  color: white;
+  display: flex;
+  /* min-width: 300px; */
+  justify-content: center;
+  width: 353px;
+  height: 50px;
+  border-radius: 10px 10px 0px 0px;
+  padding: 5px;
+  font-size: 30px;
+}
+
+.courses__page {
+  margin-top: 100px;
+  margin-left: 30px;
 }
