--- a/Frontend/src/components/css/Navigationbar.css
+++ b/Frontend/src/components/css/Navigationbar.css
@@ -48,6 +48,8 @@
   }
   .about-us .dropdown-content {
     display: none;
+    min-width: 180px;
+    top: 25px;
     position: absolute;
     background-color: white;
     padding: 20px;
@@ -75,10 +77,11 @@
   .courses .courses-dropdown-content {
     display: none;
     position: absolute;
+    top: 25px;
+    min-width: 300px;
     background-color: white;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1000;
-    top: 60%;
     padding: 20px;
   }
 
@@ -107,10 +110,10 @@ display: flex;
 align-items: center;
   }
 
-  .navigation__gallery-dropdown{
+  /* .navigation__gallery-dropdown{
 display: flex;
 gap: 20px;
-  }
+  } */
 
   .course-title{
     padding: 10px;
