--- a/Frontend/src/components/css/PopularCourses.scss
+++ b/Frontend/src/components/css/PopularCourses.scss
@@ -1,13 +1,13 @@
 .popular-courses-container{
-  background-image: url("./images//img-4.jpg");
+  background-image: url("./images/courses.jpg");
 background-repeat: no-repeat;
 background-size: cover;
-padding: 20px;
+padding: 50px;
 padding-bottom: 80px;
 h1{
   display: flex;
   justify-content: center;
-  color: aliceblue;
+  color: rgb(0, 0, 0);
   margin: 20px;
 }
 }
@@ -58,9 +58,13 @@ h1{
                 border-radius: 15px;
                 position: relative;
                 z-index: 1;
+                padding: 20px;
+                margin-left: 50px;
+                margin-right: 30px;
                 overflow: hidden;
                 min-height: 265px;
                 transition: 0.7s;
+                margin-top: 10px;
 }
 
 .course-list{
@@ -73,7 +77,7 @@ h1{
 .course__btn{
   display: flex;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
 .product-item h2 {
@@ -99,15 +103,20 @@ transition: 0.7s;
 }
 }
 .course-item {
-  background-color: #fff;
+  background: linear-gradient(to right, #ebaeb9, #f8b791);
   box-shadow: 0 2px 4px 0 rgba(136, 144, 195, 0.2),
     0 5px 15px 0 rgba(37, 44, 97, 0.15);
   border-radius: 5px;
   overflow: hidden;
   cursor: pointer;
   transition: 0.3s;
-  margin-top: 100px;
-  // gap: 20px;
+  margin-top: 60px;
+  
+
+
+  h2{
+    color: rgb(0, 0, 0) !important;
+  }
 
   &:hover {
     transform: translateY(-10px);
