--- a/Frontend/src/components/css/Products.css
+++ b/Frontend/src/components/css/Products.css
@@ -11,6 +11,7 @@ body {
   .heading{
     text-align: center;
     margin-top: 30px;
+    font-weight: bold;
   }
   .product-list {
     display: flex;
@@ -24,7 +25,7 @@ body {
     border: 1px solid #ddd;
     padding: 20px;
     cursor: pointer;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     position: relative;
     transition: background-color 0.3s;
   }
@@ -81,8 +82,8 @@ body {
   color: black;
   background-color: #FFC0C7;
   padding: 24px;
-  width: 400px;
-  height: 300px;
+  width: 500px;
+  height: 150px;
   border-radius: 5px;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
