--- a/Backend/public/views/gallery/addVideo.ejs
+++ b/Backend/public/views/gallery/addVideo.ejs
@@ -8,11 +8,11 @@
 <div id="videoContainer">
     <% videos.forEach(video=> { %>
         <div class="imageWrapper">
-            <iframe width="300px" height="200px" src="https://www.youtube.com/embed/<%= video %>"
+            <iframe width="300px" height="200px" src="https://www.youtube.com/embed/<%= video.videoid %>"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
-            <span class="deleteIcon" onclick="deleteVideo('<%= video %>')">❌</span>
+            <span class="deleteIcon" onclick="deleteVideo('<%= video._id %>')">❌</span>
         </div>
         <% }); %>
 </div>
