--- a/Backend/public/views/courses/addCourse.ejs
+++ b/Backend/public/views/courses/addCourse.ejs
@@ -2,11 +2,15 @@
 
 <form>
     <!-- Course Input Box -->
-    <label for="fcourse">Course:</label>
+    <!-- <label for="fcourse">Course:</label>
     <input type="text" id="fcourse" name="course" required>
-
+    
+    <br> -->
+    
+    <!-- Title Input Box -->
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title" required>
     <br>
-
 
 
     <!-- Subtitle with Yes/No Radio Buttons -->
@@ -29,9 +33,6 @@
 
 
     <div id="subtitleDetails" style="display: none; flex-direction: column;">
-        <!-- Title Input Box -->
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required>
         <br>
         
         <!-- Sub Button Input Box -->
