--- a/Frontend/src/components/css/Products.css
+++ b/Frontend/src/components/css/Products.css
@@ -97,12 +97,13 @@ body {
 
 .product__item{
   color: black;
-  background-color: blueviolet;
+  background-color: rgb(60, 158, 219);
   padding: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 150px;
+  min-width: 340px;
   border-radius: 5px;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
