--- a/Frontend/src/components/css/style.scss
+++ b/Frontend/src/components/css/style.scss
@@ -1,5 +1,6 @@
 @import './Features.scss';
 @import './PopularCourses.scss';
 @import './Footer.scss';
-@import './whyinspiro.scss';
-@import './ContactUs.scss'
+@import './ContactUs.scss';
+@import './Navigationbar.scss';
+@import './sidebar.scss'
