updating Product to include Photo feature

--- a/Backend/public/views/products/updateProduct.ejs
+++ b/Backend/public/views/products/updateProduct.ejs
@@ -35,6 +35,10 @@
         <label for="upAddSubProductLink">Product Link</label>
         <input type="text" id="upAddSubProductLink" name="subProductLink" required>
 
+        <label for="updateProductPhoto">Photo:</label>
+        <input type="file" id="updateProductPhoto" name="productPhoto" accept="image/*" required>
+        <br>
+
         <!-- Description Input Box -->
         <!-- <label for="quill-editorSubupAdd">Description:</label> -->
         <!-- <div id="quill-editorSub" name="description"></div> -->
