--- a/Backend/public/views/adminHome.ejs
+++ b/Backend/public/views/adminHome.ejs
@@ -60,6 +60,17 @@
                         <a class="dropdown-item" onclick="loadSection('deleteTestimonial',this)">Delete</a>
                     </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProducts" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Notification
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownProducts" id="notification">
+                        <a class="dropdown-item" onclick="loadSection('addNotification',this)" id="addNotificationLoad">Add</a>
+                        <a class="dropdown-item" onclick="loadSection('updateNotification',this)" id="updateNotificationLoad">Update</a>
+                        <a class="dropdown-item" onclick="loadSection('deleteNotification',this)">Delete</a>
+                    </div>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a>
                 </li>
@@ -84,6 +95,7 @@
     <script src="/js/product.js" defer></script>
     <script src="/js/gallary.js" defer></script>
     <script src="/js/testimonial.js" defer></script>
+    <script src="/js/notification.js" defer></script>
 </body>
 
 </html>
