--- a/Frontend/src/components/css/PopularCourses.scss
+++ b/Frontend/src/components/css/PopularCourses.scss
@@ -140,6 +140,30 @@ transition: 0.7s;
   }
 }
 
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  background-color: #ec3636;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  font-size: 200px;
+  cursor: pointer;
+  transition: opacity 0.3s;
+  z-index: 999;
+}
+
+.scroll-to-top:hover {
+  background-color: darkred;
+}
+
+
 
 @media (min-width: 1400px) and (max-width: 1800px) {
   .text__left {
