--- a/Backend/public/views/adminHome.ejs
+++ b/Backend/public/views/adminHome.ejs
@@ -4,7 +4,8 @@
 <head>
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">    
+    <!-- <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">     -->
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/gallery.css">
 </head>
 
@@ -24,7 +25,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownCourses" id="courses">
                         <a class="dropdown-item" onclick="loadSection('addCourse',this)">Add</a>
-                        <a class="dropdown-item" onclick="loadSection('updateCourse',this)" id="updateCourseQload">Update</a>
+                        <a class="dropdown-item" onclick="loadSection('updateCourse',this)"
+                            id="updateCourseQload">Update</a>
                         <a class="dropdown-item" onclick="loadSection('deleteCourse',this)">Delete</a>
                     </div>
                 </li>
@@ -66,8 +68,10 @@
                         Notification
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownProducts" id="notification">
-                        <a class="dropdown-item" onclick="loadSection('addNotification',this)" id="addNotificationLoad">Add</a>
-                        <a class="dropdown-item" onclick="loadSection('updateNotification',this)" id="updateNotificationLoad">Update</a>
+                        <a class="dropdown-item" onclick="loadSection('addNotification',this)"
+                            id="addNotificationLoad">Add</a>
+                        <a class="dropdown-item" onclick="loadSection('updateNotification',this)"
+                            id="updateNotificationLoad">Update</a>
                         <a class="dropdown-item" onclick="loadSection('deleteNotification',this)">Delete</a>
                     </div>
                 </li>
@@ -88,7 +92,12 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <!-- <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
+
     <script src="/js/richText.js" defer></script>
     <script src="/js/index.js" defer></script>
     <script src="/js/course.js" defer></script>
